cambios en Torneo para funcionar con el OrganizadorDePartidos